python-sqlfuse (0.5.23-1) unstable; urgency=low

  * Clean up and streamline shutting down.
  * Hotpatch Python threading module (infinite recursion when debugging, fixed in 2.7).
  * minor bugs squashed

 -- Matthias Urlichs <smurf@smurf.noris.de>  Tue, 03 May 2011 20:46:58 +0200

python-sqlfuse (0.5.22-1) unstable; urgency=low

  * printing None with %d won't work
  * fix rename

 -- Matthias Urlichs <smurf@smurf.noris.de>  Mon, 02 May 2011 02:32:46 +0200

python-sqlfuse (0.5.21-1) unstable; urgency=low

  * missing parameter

 -- Matthias Urlichs <smurf@smurf.noris.de>  Sun, 01 May 2011 20:31:32 +0200

python-sqlfuse (0.5.20-1) unstable; urgency=low

  * formatting problem

 -- Matthias Urlichs <smurf@smurf.noris.de>  Sun, 01 May 2011 20:23:27 +0200

python-sqlfuse (0.5.19-1) unstable; urgency=low

  * File closing cleaned up

 -- Matthias Urlichs <smurf@smurf.noris.de>  Sun, 01 May 2011 16:36:32 +0200

python-sqlfuse (0.5.18-1) unstable; urgency=low

  * Drop TODO records when a file is deleted

 -- Matthias Urlichs <smurf@smurf.noris.de>  Sun, 01 May 2011 10:07:49 +0200

python-sqlfuse (0.5.17-1) unstable; urgency=low

  * various stuff :-/

 -- Matthias Urlichs <smurf@smurf.noris.de>  Sat, 30 Apr 2011 09:22:27 +0200

python-sqlfuse (0.5.16-1) unstable; urgency=low

  * Fix shutdown code: immediately run all tasks until complete

 -- Matthias Urlichs <smurf@smurf.noris.de>  Wed, 13 Apr 2011 17:00:58 +0200

python-sqlfuse (0.5.15-1) unstable; urgency=low

  * Add tracing infrastructure

 -- Matthias Urlichs <smurf@smurf.noris.de>  Wed, 13 Apr 2011 15:20:30 +0200

python-sqlfuse (0.5.14-1) unstable; urgency=low

  * Add separate inode-writeback background job.
  * Adjust directory sizes after commit (retries!)
  * use NameError for translated remote calls

 -- Matthias Urlichs <smurf@smurf.noris.de>  Tue, 12 Apr 2011 21:28:36 +0200

python-sqlfuse (0.5.13-1) unstable; urgency=low

  * Support database retries (deadlocks are unavoidable …)
